<resources>
    <string name="app_name">Vibzz</string>
    <string name="app_logo">App Logo</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_profile">Create your profile</string>
    <string name="desc_profile">Create your profile to \nmake sure you set to go!</string>
    <string name="title_photos">Share Photos</string>
    <string name="desc_photos">Share your photos with \nfriends and family.</string>
    <string name="title_friends">Connect with friends</string>
    <string name="desc_friends">Connect with friends and \nMake new friends on Vibzz</string>
    <string name="finish">Finish</string>
    <string name="slide_image">Slide Image</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="join_us_now_connect_with_friends">Join Us Now\nConnect with Friends</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="icon_sign_out">Icon Sign Out</string>
    <string name="icon_add">Icon Add</string>
    <string name="create_post">Create Post</string>
    <string name="tweet">Tweet</string>
    <string name="publish">Publish</string>
</resources>